--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Node
         working-directory: ./JS/my-app
-        uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: npm
+          cache-dependency-path: ./JS/my-app/package-lock.json
       - name: Install dependencies
         working-directory: ./JS/my-app
         run: npm ci
