--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Node
         working-directory: ./JS/my-app
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: npm
