--- a/Python/config.yaml
+++ b/Python/config.yaml
@@ -1,9 +1,9 @@
 test_list:
-- 25
-- 29
-- 34
+- 4
+- 5
+- 6
 test_user:
-  age: 51
-  height: 180
-  name: test
+  age: 30
+  height: 180.4
+  name: lol
   weight: 70
